# reserves

./: Cargo.toml  Kraken Proof of reserves  README.md  generate-protos.sh  protoc-decode.sh
protos/: reserves.proto
src/: bitcoin.rs  common.rs  context.rs  main.rs  utils.rs
src/backend/: bitcoind.rs  mod.rs  trezor.rs
src/cmd/: add_proof.rs  add_utxo.rs  add_utxos.rs  common.rs  drop.rs  drop_utxos.rs  fetch_utxos.rs  init.rs  inspect.rs  mod.rs  sign.rs  verify.rs
src/protos/: mod.rs  reserves.rs
