[package]
name = "reserves"
version = "0.1.0"
authors = ["Steven Roose <steven@stevenroose.org>"]


[dependencies]
clap = "2.32"
log = "0.4.5"
fern = "0.5.6"
protobuf = "2.0.4"
hex = "0.3.2"
rust-crypto = "0.2.36"

bitcoin = { version = "0.14", features = [ "serde-decimal" ] }
secp256k1 = "0.11"
bitcoin-amount = { version = "0.1.4", features = [ "serde" ] }
bitcoinconsensus = "0.16.3"


[dependencies.bitcoindrpc]
git = "https://github.com/stevenroose/rust-bitcoindrpc.git"
branch = "master"


[patch.crates-io]
bitcoin = { path = "/home/steven/code/rust/bitcoin" }

[patch."https://github.com/stevenroose/rust-bitcoindrpc.git"]
bitcoindrpc = { path = "/home/steven/code/rust/bitcoindrpc" }
