[package]
name = "reserves"
version = "0.1.0"
authors = ["Steven Roose <steven@stevenroose.org>"]


[dependencies]
clap = "2.32"
log = "0.4.5"
fern = "0.5.6"
protobuf = "2.0.4"
hex = "0.3.2"
rust-crypto = "0.2.36"

trezor = { path = "/home/steven/code/rust/trezor-api" }
rpassword = "2.0.0"

bitcoin = { version = "0.15", features = [ "serde-decimal" ] }
secp256k1 = "0.11"
bitcoin-amount = { version = "0.1.4", features = [ "serde" ] }
bitcoinconsensus = "0.16.3"

bitcoincore-rpc = "0.1.0"
bitcoincore-rpc-json = "0.1.0"


[patch.crates-io]
bitcoin = { path = "/home/steven/code/rust/bitcoin" }
bitcoincore-rpc = { path = "/home/steven/code/rust/bitcoindrpc" }
bitcoincore-rpc-json = { path = "/home/steven/code/rust/bitcoindrpc/json" }
trezor = { path = "/home/steven/code/rust/trezor-api" }
